# pdp-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: agent_connected_times.sql
src/adapters/input/api/: exception_handlers.py  main.py
src/adapters/input_adapters/api/: main.py
src/adapters/output_adapters/services/: __init__.py  (+1 more)
src/application/dto/: __init__.py  excel_dto.py  pdp_dto.py
src/application/services/: __init__.py  excel_service.py
src/application/use_cases/: __init__.py  generate_excel_report.py  process_pdp_data.py
src/domain/entities/: __init__.py  call_data.py  pdp_record.py
src/domain/repositories/: __init__.py  call_api_repository.py  call_repository.py  pdp_repository.py  productivity_repository.py
src/domain/value_objects/: email.py  period.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: __init__.py  bigquery_client.py  postgres_manager.py
src/infrastructure/di/: container.py
src/infrastructure/excel/: __init__.py  excel_generator.py  heatmap_formatter.py
src/infrastructure/http/: auth_client.py  http_client.py
src/infrastructure/logging/: logger.py
src/shared/: __init__.py  constants.py  exceptions.py
tests/e2e/: test_pdp_endpoints.py
tests/integration/: test_bigquery_repository.py  test_call_api_repository.py
tests/unit/application/: test_process_pdp_use_case.py
tests/unit/domain/: test_email_value_object.py  test_pdp_record.py  test_period_value_object.py
(+20 files in other folders)
